- Navigator Bugfix